--- a/src/frontend/src/app/writer/writer.component.html
+++ b/src/frontend/src/app/writer/writer.component.html
@@ -6,7 +6,7 @@
 </div>
 <div>
     <label>When:</label>
-    <input type="datetime-local" [ngModel]="write.when | date:'yyyy-MM-ddThh:MM:ss'" name="write.when" />
+    <input type="datetime-local" [ngModel]="write.when | date:'yyyy-MM-ddTHH:mm:ss" name="write.when" />
 </div>
 <div>
     <label>Note</label>
