--- a/src/frontend/src/app/writer/writer.component.html
+++ b/src/frontend/src/app/writer/writer.component.html
@@ -16,7 +16,7 @@
         <label>Note</label>
         <input class="form-control" value="{{write.note}}" placeholder="Note" [(ngModel)]="write.note" name="write.note" />
     </div>
-    <app-writer-stats [stats]="write.stats" [statsAndUnits]="autoComplete.stats" (onAddStat)="addStat($event)"></app-writer-stats>
+    <app-writer-stats [stats]="write.stats" [statsAndUnits]="autoComplete.stats" (onAddStat)="addStat($event)" (onRemoveStat)="removeStat($event)"></app-writer-stats>
     <div class="form-group">
         <label>Tags</label>
         <div class="row" *ngFor="let tag of write.tags">
