--- a/src/frontend/src/app/writer/writer.component.html
+++ b/src/frontend/src/app/writer/writer.component.html
@@ -1,9 +1,18 @@
 <div class="container">
-  <h1>Writer</h1>
+    <div class="row">
+        <div class="col-xs-4">
+            <h1>Writer</h1>
+        </div>
+        <div class="col-xs-8">
+            <div *ngIf="type.invalid && (type.dirty || type.touched)" class="alert alert-danger">
+                Type required
+            </div>
+        </div>
+    </div>
   <form (ngSubmit)="onSubmit(writeForm)" #writeForm="ngForm">
     <div class="form-group">
         <label for="type">Type:</label>
-        <input class="form-control" placeholder="Type" [(ngModel)]="write.type" name="write.type" list="types" (change)="updateSuggestions()" />
+        <input class="form-control" placeholder="Type" [(ngModel)]="write.type" name="write.type" list="types" (change)="updateSuggestions()" required #type="ngModel" />
         <datalist id="types">
             <option *ngFor="let type of autoComplete.types" value="{{type}}">
         </datalist>
@@ -40,7 +49,7 @@
         </div>
     </div>
     <div>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <input type="submit" class="btn btn-success" value="Submit" [disabled]="writeForm.invalid" />
     </div>
   </form>
 </div>
