--- a/src/frontend/src/app/writer/writer.component.html
+++ b/src/frontend/src/app/writer/writer.component.html
@@ -26,28 +26,7 @@
         <input class="form-control" value="{{write.note}}" placeholder="Note" [(ngModel)]="write.note" name="write.note" />
     </div>
     <app-writer-stats [stats]="write.stats" [statsAndUnits]="autoComplete.stats" (onAddStat)="addStat($event)" (onRemoveStat)="removeStat($event)"></app-writer-stats>
-    <div class="form-group">
-        <label>Tags</label>
-        <div class="row" *ngFor="let tag of write.tags">
-            <div class="col-xs-5">
-                {{tag}}
-            </div>
-            <div class="col-xs-2">
-                <button class="btn btn-danger" type="button" (click)="removeTag(tag)">Remove</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-5">
-                <input class="form-control" [(ngModel)]="newTag" placeholder="Tag" name="newTag.tag" list="tags" (keyup.enter)="addTag()" />
-            </div>
-            <datalist id="tags">
-                <option *ngFor="let tag of autoComplete.tags" value="{{tag}}"></option>
-            </datalist>
-            <div class="col-xs-2">
-                <button class="btn" type="button" name="newTag.add" (click)="addTag()">Add</button>
-            </div>
-        </div>
-    </div>
+    <app-writer-tags [tags]="write.tags" [autoComplete]="autoComplete.tags" (onAddTag)="addTag($event)" (onRemoveTag)="removeTag($event)"></app-writer-tags>
     <div>
         <input type="submit" class="btn btn-success" value="Submit" [disabled]="writeForm.invalid" />
     </div>
